--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div id="react-root"></div>
+  <script src="/scripts/chart.js/dist/Chart.bundle.js"></script>
   <script src="https://unpkg.com/react@16/umd/react.development.js" 
     crossorigin></script>
   <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" 
